--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -26,7 +26,7 @@
                                         order's status, and keep track of the orders you have previously made.</p>
                                 </div>
                                 <div class="bottom-form">
-                                    <a href="#" class="btn btn-default pull-right">Continue</a>
+                                    <a href="{% url 'accounts:signup' %}" class="btn btn-default pull-right">Continue</a>
                                 </div>
                             </div>
 
