add #tags for products

--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -1127,7 +1127,7 @@
                                                         <div class="product-item-container">
                                                             <div class="left-block">
                                                                 <div class="product-image-container second_img">
-                                                                    <a href="product.html" target="_self"
+                                                                    <a href="{{ product.get_absolute_url }}" target="_self"
                                                                        title="Pastrami bacon">
                                                                         <img src="{{ product.image.url }}"
                                                                              class="img-1 img-responsive"
@@ -1176,7 +1176,7 @@
                                                                         <span class="fa fa-stack"><i
                                                                                 class="fa fa-star-o fa-stack-2x"></i></span>
                                                                     </div>
-                                                                    <h4><a href="product.html" title="Pastrami bacon"
+                                                                    <h4><a href="{{ product.get_absolute_url }}" title="Pastrami bacon"
                                                                            target="_self">{{ product.title }}</a></h4>
                                                                     <div class="price">${{ product.price }}</div>
                                                                 </div>
