--- a/products/templates/products/tag.html
+++ b/products/templates/products/tag.html
@@ -340,7 +340,8 @@
                                                     <span class="fa fa-stack"><i
                                                             class="fa fa-star-o fa-stack-2x"></i></span>
                                                 </div>
-                                                <h4><a href="{{ product.get_absolute_url }}" title="Chicken swinesha" target="_self">{{ product.title }}</a></h4>
+                                                <h4><a href="product.html" title="Chicken swinesha" target="_self">Chicken
+                                                    swinesha</a></h4>
                                                 <div class="price"><span class="price-new">${{ product.price }}</span>
                                                     <span class="price-old">${{ product.old_price }}</span>
                                                 </div>
