add ckeditoer to project for descriptions

--- a/products/templates/products/product-detail.html
+++ b/products/templates/products/product-detail.html
@@ -98,7 +98,7 @@
 
                                 <div class="short_description form-group">
                                     <h4>OverView</h4>
-                                    {{ product.description }}.
+                                    {{ product.description|safe }}.
                                 </div>
                                 <div id="product">
                                     <h4>Available Options</h4>
@@ -205,121 +205,9 @@
                         <div class="tab-content col-xs-12">
                             <div id="tab-1" class="tab-pane fade active in">
                                 <p>
-                                    The 30-inch Apple Cinema HD Display delivers an amazing 2560 x 1600 pixel
-                                    resolution. Designed specifically for the creative professional, this display
-                                    provides more space for easier access to all the tools and palettes needed to edit,
-                                    format and composite your work. Combine this display with a Mac Pro, MacBook Pro, or
-                                    PowerMac G5 and there's no limit to what you can achieve. <br>
-                                    <br>
-                                    The Cinema HD features an active-matrix liquid crystal display that produces
-                                    flicker-free images that deliver twice the brightness, twice the sharpness and twice
-                                    the contrast ratio of a typical CRT display. Unlike other flat panels, it's designed
-                                    with a pure digital interface to deliver distortion-free images that never need
-                                    adjusting. With over 4 million digital pixels, the display is uniquely suited for
-                                    scientific and technical applications such as visualizing molecular structures or
-                                    analyzing geological data. <br>
-                                    <br>
-                                    Offering accurate, brilliant color performance, the Cinema HD delivers up to 16.7
-                                    million colors across a wide gamut allowing you to see subtle nuances between colors
-                                    from soft pastels to rich jewel tones. A wide viewing angle ensures uniform color
-                                    from edge to edge. Apple's ColorSync technology allows you to create custom profiles
-                                    to maintain consistent color onscreen and in print. The result: You can confidently
-                                    use this display in all your color-critical applications. <br>
-                                    <br>
-                                    Housed in a new aluminum design, the display has a very thin bezel that enhances
-                                    visual accuracy. Each display features two FireWire 400 ports and two USB 2.0 ports,
-                                    making attachment of desktop peripherals, such as iSight, iPod, digital and still
-                                    cameras, hard drives, printers and scanners, even more accessible and convenient.
-                                    Taking advantage of the much thinner and lighter footprint of an LCD, the new
-                                    displays support the VESA (Video Electronics Standards Association) mounting
-                                    interface standard. Customers with the optional Cinema Display VESA Mount Adapter
-                                    kit gain the flexibility to mount their display in locations most appropriate for
-                                    their work environment. <br>
-                                    <br>
-                                    The Cinema HD features a single cable design with elegant breakout for the USB 2.0,
-                                    FireWire 400 and a pure digital connection using the industry standard Digital Video
-                                    Interface (DVI) interface. The DVI connection allows for a direct pure-digital
-                                    connection.<br>
+                                    {{ product.description|safe }}
                                 </p>
-                                <h3>
-                                    Features:</h3>
-                                <p>
-                                    Unrivaled display performance</p>
-                                <ul>
-                                    <li>
-                                        30-inch (viewable) active-matrix liquid crystal display provides breathtaking
-                                        image quality and vivid, richly saturated color.
-                                    </li>
-                                    <li>
-                                        Support for 2560-by-1600 pixel resolution for display of high definition still
-                                        and video imagery.
-                                    </li>
-                                    <li>
-                                        Wide-format design for simultaneous display of two full pages of text and
-                                        graphics.
-                                    </li>
-                                    <li>
-                                        Industry standard DVI connector for direct attachment to Mac- and Windows-based
-                                        desktops and notebooks
-                                    </li>
-                                    <li>
-                                        Incredibly wide (170 degree) horizontal and vertical viewing angle for maximum
-                                        visibility and color performance.
-                                    </li>
-                                    <li>
-                                        Lightning-fast pixel response for full-motion digital video playback.
-                                    </li>
-                                    <li>
-                                        Support for 16.7 million saturated colors, for use in all graphics-intensive
-                                        applications.
-                                    </li>
-                                </ul>
-                                <p>
-                                    Simple setup and operation</p>
-                                <ul>
-                                    <li>
-                                        Single cable with elegant breakout for connection to DVI, USB and FireWire ports
-                                    </li>
-                                    <li>
-                                        Built-in two-port USB 2.0 hub for easy connection of desktop peripheral devices.
-                                    </li>
-                                    <li>
-                                        Two FireWire 400 ports to support iSight and other desktop peripherals
-                                    </li>
-                                </ul>
-                                <p>
-                                    Sleek, elegant design</p>
-                                <ul>
-                                    <li>
-                                        Huge virtual workspace, very small footprint.
-                                    </li>
-                                    <li>
-                                        Narrow Bezel design to minimize visual impact of using dual displays
-                                    </li>
-                                    <li>
-                                        Unique hinge design for effortless adjustment
-                                    </li>
-                                    <li>
-                                        Support for VESA mounting solutions (Apple Cinema Display VESA Mount Adapter
-                                        sold separately)
-                                    </li>
-                                </ul>
-                                <h3>
-                                    Technical specifications</h3>
-                                <p>
-                                    <b>Screen size (diagonal viewable image size)</b></p>
-                                <ul>
-                                    <li>
-                                        Apple Cinema HD Display: 30 inches (29.7-inch viewable)
-                                    </li>
-                                </ul>
-                                <p>
-                                    <b>Screen type</b></p>
-                                <ul>
-                                    <li>
-                                        Thin film transistor (TFT) active-matrix liquid crystal display (AMLCD)
-                                    </li>
-                                </ul>
+                             
                                 <!-- <p>
                                     <b>Resolutions</b></p>
                                 <ul>
@@ -575,7 +463,8 @@
                                 </form>
                             </div>
                             <div id="tab-4" class="tab-pane fade">
-                               {% for tag in product.tags.all %} <a href="{% url 'products:tags' tag %}">{{ tag.name }}</a>,{% endfor %}
+                                {% for tag in product.tags.all %}
+                                    <a href="{% url 'products:tags' tag %}">{{ tag.name }}</a>,{% endfor %}
                             </div>
                             <div id="tab-5" class="tab-pane fade">
                                 <p>Lorem ipsum dolor sit amet, consetetur
